--- a/web/entry.xhtml
+++ b/web/entry.xhtml
@@ -10,14 +10,27 @@
     <link rel="shortcut icon" type="image/x-icon" href="#{resource['img/favicon.ico']}"/>
 </h:head>
 <h:body>
-    <div>
+
+    <div class="header">
         <h1>Веб-программирование, Лаб. 3, Вариант 10231</h1>
         <div><p id="credit"><img src="#{resource['img/tanks.gif']}" width="40" height="20" alt="Лучшая картинка в мире"/>
-            <a id="git" href="https://github.com/roclh" title="Перейти к профилю Github разработчика">Колесников
+            <a id="git" href="https://github.com/Roclh" target="_blank" title="Перейти к профилю Github разработчика">Колесников
             Никита Алексеевич, P3210</a>
             <img src="#{resource['img/tanks.gif']}" width="40" height="20" alt="Лучшая картинка в мире"/></p>
         </div>
     </div>
-    <h:outputStylesheet name="style.css"/>
+
+    <div>
+    <h:form>
+        <h:commandButton label="Check" value="ЗАВОДИ ДВИГАТЕЛЬ" />
+    </h:form>
+    </div>
+    <div id="clock" style="font-size: 20px"></div>
+
+    <div class="footer">ИТМО<br/>2020</div>
+
+
+    <h:outputScript library="js" name="clock.js"/>
+    <h:outputStylesheet library="css" name="style.css"/>
 </h:body>
 </html>
