first working part!!

--- a/web/entry.xhtml
+++ b/web/entry.xhtml
@@ -13,19 +13,19 @@
 
     <div class="header">
         <h1>Веб-программирование, Лаб. 3, Вариант 10231</h1>
-        <div><p id="credit"><img src="#{resource['img/tanks.gif']}" width="40" height="20" alt="Лучшая картинка в мире"/>
+        <div><p id="credit"><img src="#{resource['img/tanks.gif']}" width="2em" height="1em" alt="Лучшая картинка в мире"/>
             <a id="git" href="https://github.com/Roclh" target="_blank" title="Перейти к профилю Github разработчика">Колесников
             Никита Алексеевич, P3210</a>
-            <img src="#{resource['img/tanks.gif']}" width="40" height="20" alt="Лучшая картинка в мире"/></p>
+            <img src="#{resource['img/tanks.gif']}" width="2em" height="1em" alt="Лучшая картинка в мире"/></p>
         </div>
     </div>
 
     <div>
     <h:form>
-        <h:commandButton label="Check" value="ЗАВОДИ ДВИГАТЕЛЬ" />
+        <h:commandButton label="Check" value="ЗАВОДИ ДВИГАТЕЛЬ" action="index"/>
     </h:form>
     </div>
-    <div id="clock" style="font-size: 20px"></div>
+    <div id="clock" style="font-size: 2em"></div>
 
     <div class="footer">ИТМО<br/>2020</div>
 
